# knock

./: .gitignore  README.md  pyproject.toml
knock/: __main__.py  boid.py  flock.py  flowfield.py  linedrawer.py  liquid.py  momenta.py  mover.py  particle_emitter.py  pendulum.py  planet.py  spinners.py  spiral.py
knock/depict/: __init__.py  basic.py  canvas.py  color.py  engine.py  input.py  misc.py  scene.py  signal.py  utils.py  vec3d.py  window.py
knock/depict/nodes/: __init__.py  area2d.py  gui.py  node2d.py  shapes.py
knock/simulations/: __init__.py  boid.py  cantor.py  dump.py  flock.py  flowfield.py  fractal_tree.py  kochsnowflake.py  linedrawer.py  liquid.py  momenta.py  mover.py  orbits.py  particle_emitter.py  pendulum.py  planet.py  spinners.py  spiral.py
tests/: test_color.py  test_knock.py  test_scene.py  test_vec3d.py
