[tool.poetry]
name = "knock"
version = "1.0.0"
description = "Simulations of anything and everything interesting."
authors = ["Em Dash <mbyx.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
pygame-gui = "^0.6.7"
vidmaker = "^2.3.0"
attrs = "^22.2.0"
perlin-noise = "^1.12"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
black = { version = "^23.1.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
